<resources>
    <string name="app_name">OrangeHome</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="web_error">网络异常</string>

    <string name="exit_reminder">再按一次将退出橙家App...</string>


    <!--功能切换栏-->
    <string name="function_tab_mainpage">主页</string>
    <string name="function_tab_device">设备</string>
    <string name="function_tab_scene">场景</string>
    <string name="function_tab_setting">设置</string>

    <string name="state_display_outside">室外天气</string>

    <string name="state_display_inside">室内空气质量</string>
    <string name="state_display_inside_no_sensor">没有检测到传感器设备！</string>
    <string name="state_display_inside_pm25">pm2.5</string>
    <string name="state_display_inside_wendu">温度</string>
    <string name="state_display_inside_shidu">湿度</string>
    <string name="state_display_inside_ranqi">燃气</string>

    <string name="state_display_log">日志</string>
    <string name="state_display_updatetime">更新时间：</string>
    <string name="state_display_aqi">微克/立方米</string>
    <string name="state_display_wendu">温度</string>
    <string name="state_display_wendu_unit">℃</string>
    <string name="state_display_shidu">湿度</string>
    <string name="state_display_shidu_unit">%</string>


    <string name="add_device_activity_title">添加设备</string>
    <string name="add_device_activity_device_name">设备名称</string>
    <string name="add_device_activity_device_type">设备类型</string>
    <string name="add_device_activity_device_location">设备位置</string>
    <string name="add_device_activity_device_ip">设备地址</string>
    <string name="add_device_activity_device_note">备注</string>

    <string name="add_device_activity_device_name_error">设备名称格式错误</string>
    <string name="add_device_activity_device_ip_error">ip地址格式错误</string>
    <string name="add_device_activity_device_location_error">设备位置格式错误</string>
    <string name="add_device_activity_device_note_error">设备备注格式错误</string>


    <string name="add_device_activity_success">设备添加成功！</string>

    <string name="tab_scene_back_home">回家</string>
    <string name="tab_scene_leave_home">外出</string>
    <string name="tab_scene_get_up_night">起夜</string>
    <string name="tab_scene_sleep">睡觉</string>
    <string name="tab_scene_meeting">会客</string>
    <string name="tab_scene_more">更多</string>


    <string name="tab_device_list_loading">网关设备正在连接中，请稍候...</string>


    <string name="air_c_remote_c_name">空调位置名称</string>
    <string name="air_c_remote_c_air_c_remote_c_temperature">空调温度</string>
    <string name="air_c_remote_c_air_c_remote_c_temperature_symbol">℃</string>
    <string name="air_c_remote_c_air_c_remote_c_mode">运行模式:</string>
    <string name="air_c_remote_c_air_c_remote_c_wend_speed">风速:</string>
    <string name="air_c_remote_c_air_c_remote_c_switch">开关</string>
    <string name="air_c_remote_c_air_c_remote_c_temperature1">温度</string>
    <string name="air_c_remote_c_air_c_remote_c_mode1">模式</string>
    <string name="air_c_remote_c_air_c_remote_c_wend_speed1">风速:</string>
    <string name="air_c_remote_c_air_c_remote_c_wend_light">灯光</string>
    <string name="air_c_remote_c_air_c_remote_c_wend_voice_r">语音</string>
    <string name="air_c_remote_c_off_show">空调未开</string>

    <string name="no_hsb_remote_ctl_error">请先在同一位置添加遥控器...</string>

    <string name="start_voice_recognizer">开始识别...</string>


    <string name="cc9201_remote_c_air_c_remote_c_switch">开关</string>

    <string name="channel_list_activity_title">频道列表</string>

    <string name="add_channel_dialog_id">频道ID：</string>

    <string name="add_channel_dialog_name">频道名称：</string>

    <string name="add_channel_dialog_id_error">频道ID输入不合法，请输入数字！</string>


    <string name="edit_device_activity_title">修改设备</string>
    <string name="edit_device_activity_success">修改设备成功</string>

    <string name="device_timer_activity_title">定时设置</string>
    <string name="device_timer_activity_timer_operation">定时操作</string>
    <string name="device_timer_activity_operation">操作</string>
    <string name="device_timer_activity_time">时间</string>
    <string name="device_timer_activity_timer_repeat">每日重复</string>
    <string name="device_timer_activity_on_time">开启时间</string>
    <string name="device_timer_activity_off_time">关闭时间</string>


    <string name="scence_activity_title">场景名称</string>
    <string name="scence_oreration_add_action">添加操作</string>

    <string name="add_timer_success">定时设置成功！</string>

    <string name="scence_operation_activity_title">场景操作</string>
    <string name="scence_operation_activity_oreration_condition">执行条件</string>
    <string name="scence_operation_activity_add_oreration_condition">添加条件</string>
    <string name="scence_operation_activity_oreration_action">执行动作</string>
    <string name="scence_operation_activity_select_device">选择设备</string>
    <string name="scence_operation_activity_select_state">选择状态</string>
    <string name="scence_operation_activity_add_oreration_action">添加动作</string>
    <string name="scence_operation_activity_edit_oreration_action">编辑动作</string>
    <string name="scence_operation_activity_edit_oreration_condition">编辑条件</string>
    <string name="scence_operation_activity_oreration_delay">延时</string>
    <string name="scence_operation_activity_oreration_delay_unit">秒（0-99）</string>
    <string name="scence_operation_activity_select_device_defult">请选择设备</string>
    <string name="scence_operation_activity_select_state_defult">请选择状态</string>
    <string name="scence_operation_activity_select_val_error">数值填写不合法，请检查</string>
    <string name="scence_operation_activity_add_operation_error">请至少添加一个动作！</string>
    <string name="scence_operation_activity_add_operation_delay_error">请输入延时！</string>

    <string name="scence_fragment_add_scene_error">请输入情景模式名称！</string>
    <string name="scence_activity_add_scene_success">情景模式添加成功！</string>
    <string name="scence_activity_edit_scene_success">情景模式修改成功！</string>
    <string name="scence_activity_enter_scene_success">已进入</string>
    <string name="scence_activity_del_scene_success">已删除</string>

    <string name="scene_fragment_scene_invalid">该模式下某些设备以及下线，模式失效。请设备上线后重试！</string>


    <string name="log_info_add_device">添加设备</string>
    <string name="log_info_enter_scene">进入</string>
    <string name="log_info_ac_power_on">打开</string>
    <string name="log_info_ac_power_off">关闭</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_remote_control">RemoteControlActivity</string>
    <string name="title_activity_add_device">AddDeviceActivity</string>
    <string name="title_activity_device_timer">DeviceTimerActivity</string>
    <string name="title_activity_air_cremote_c">AirCRemoteCActivity</string>
    <string name="title_activity_cc9201_remote_c">CC9201RemoteCActivity</string>
    <string name="title_activity_channel_list">ChannelListActivity</string>
    <string name="title_activity_edit_device">EditDeviceActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_scence">ScenceActivity</string>
    <string name="title_activity_new_scene_action">NewSceneActionActivity</string>
    <string name="title_activity_scene_operation">SceneOperationActivity</string>
    <string name="title_activity_lock_view">LockViewActivity</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_voice_recognition">VoiceRecognitionActivity</string>

</resources>
