<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/function_tab"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginLeft="100dp"
    android:layout_marginRight="100dp"
    android:layout_alignParentTop="true"
    android:orientation="horizontal"
    android:layout_weight="8">
    <RelativeLayout
        android:id="@+id/function_tab_mainpage"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/function_tab_txt"
            android:text="@string/function_tab_mainpage"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/function_tab_device"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/function_tab_txt"
            android:text="@string/function_tab_device"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/function_tab_scene"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/function_tab_txt"
            android:text="@string/function_tab_scene"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/function_tab_setting"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/function_tab_txt"
            android:text="@string/function_tab_setting"/>
    </RelativeLayout>
</LinearLayout>