<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="#ffffff"
    tools:context="com.gmoonxs.www.orangehome.AirCRemoteCActivity">

    <LinearLayout
        android:id="@+id/air_conditioner_off"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_weight="2">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="5"
            >
            <TextView
                android:id="@+id/air_c_remote_c_name_off"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="left|center_vertical"
                android:layout_marginLeft="20dp"
                style="@style/air_c_remote_c_air_c_remote_c_normal"
                android:text="@string/air_c_remote_c_name"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:layout_weight="2"
            >
            <TextView
                android:id="@+id/air_c_remote_c_off_show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                style="@style/air_c_remote_c_air_c_remote_c_temperature"
                android:text="@string/air_c_remote_c_off_show"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="5"
            ></LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/air_conditioner_on"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_weight="2"
        android:layout_margin="20dp">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/boder"
            android:layout_weight="5"
            >
            <TextView
                android:id="@+id/air_c_remote_c_name"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="left|center_vertical"
                android:layout_marginLeft="20dp"
                style="@style/air_c_remote_c_air_c_remote_c_normal"
                android:text="@string/air_c_remote_c_name"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="2">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/boder"
                >
                <TextView
                    android:id="@+id/air_c_remote_c_temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    style="@style/air_c_remote_c_air_c_remote_c_temperature"
                    android:text="@string/air_c_remote_c_air_c_remote_c_temperature"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:paddingLeft="20dp"
                    android:layout_height="fill_parent"
                    android:layout_toRightOf="@id/air_c_remote_c_temperature"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/air_c_remote_c_air_c_remote_c_temperature_symbol"
                        style="@style/air_c_remote_c_air_c_remote_c_temperature_symbol"/>

                </LinearLayout>
            </RelativeLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:layout_weight="5">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:background="@drawable/boder">
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    style="@style/air_c_remote_c_air_c_remote_c_small"
                    android:text="@string/air_c_remote_c_air_c_remote_c_mode"/>
                <TextView
                    android:id="@+id/air_c_remote_c_air_c_remote_c_mode"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    style="@style/air_c_remote_c_air_c_remote_c_small"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:background="@drawable/boder">
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    style="@style/air_c_remote_c_air_c_remote_c_small"
                    android:text="@string/air_c_remote_c_air_c_remote_c_wend_speed"/>
                <TextView
                    android:id="@+id/air_c_remote_c_air_c_remote_c_wend_speed"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    style="@style/air_c_remote_c_air_c_remote_c_small"
                    android:layout_weight="1" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_weight="3"
        android:layout_margin="20dp">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:background="@drawable/boder">
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="5"
                    android:text="@string/air_c_remote_c_air_c_remote_c_switch"
                    style="@style/air_c_remote_c_air_c_remote_c_small"/>
                <ImageView
                    android:padding="18dp"
                    android:id="@+id/air_c_remote_c_air_c_remote_c_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="2"
                    android:src="@drawable/switch_remote_control"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/boder"
                android:orientation="vertical">
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="5"
                    android:text="@string/air_c_remote_c_air_c_remote_c_mode1"
                    style="@style/air_c_remote_c_air_c_remote_c_small"/>
                <ImageView
                    android:padding="10dp"
                    android:id="@+id/air_c_remote_c_air_c_remote_c_mode1"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="2"
                    android:src="@drawable/mode_remote_control"/>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/boder"
            android:orientation="vertical"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="5">
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/air_c_remote_c_air_c_remote_c_temperature1"
                    style="@style/air_c_remote_c_air_c_remote_c_small"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:orientation="horizontal">
                <ImageView
                    android:padding="18dp"
                    android:id="@+id/air_c_remote_c_air_c_remote_c_tem_add"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:src="@drawable/add_tem_remote_control"/>
                <ImageView
                    android:padding="18dp"
                    android:id="@+id/air_c_remote_c_air_c_remote_c_tem_sub"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:src="@drawable/subtract_tem_remote_control"/>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:background="@drawable/boder"
                >
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="5"
                    android:text="@string/air_c_remote_c_air_c_remote_c_wend_speed1"
                    style="@style/air_c_remote_c_air_c_remote_c_small"/>
                <ImageView
                    android:id="@+id/air_c_remote_c_air_c_remote_c_wind_speed"
                    android:layout_width="wrap_content"
                    android:padding="10dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="2"
                    android:src="@drawable/wend_speed_remote_control"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/boder"
                android:orientation="vertical">
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="5"
                    android:text="@string/air_c_remote_c_air_c_remote_c_wend_light"
                    style="@style/air_c_remote_c_air_c_remote_c_small"/>
                <ImageView
                    android:id="@+id/air_c_remote_c_air_c_remote_c_wend_light"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:padding="10dp"
                    android:layout_weight="2"
                    android:src="@drawable/light_remote_control"/>
            </LinearLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:background="@drawable/boder"
            android:layout_weight="1">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="5"
                android:text="@string/air_c_remote_c_air_c_remote_c_wend_voice_r"
                style="@style/air_c_remote_c_air_c_remote_c_small"/>
            <ImageView
                android:id="@+id/air_c_remote_c_air_c_remote_c_wend_voice_r"
                android:layout_width="wrap_content"
                android:padding="10dp"
                android:layout_height="fill_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="2"
                android:src="@drawable/voice_r_remote_control"/>

        </LinearLayout>

    </LinearLayout>



</LinearLayout>
