<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/background"
    tools:context="com.gmoonxs.www.orangehome.AddDeviceActivity">

    <LinearLayout
        android:layout_width="500dp"
        android:layout_height="fill_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:background="#FFFFFF"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/title_height">
            <TextView
                android:textColor="#000000"
                android:layout_centerInParent="true"
                android:textStyle="bold"
                android:textSize="@dimen/title_txt_size"
                android:text="@string/edit_device_activity_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="60dp"
                    android:layout_margin="5dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:gravity="center"
                        android:text="@string/add_device_activity_device_name"
                        style="@style/add_device_txt"
                        android:layout_weight="6"/>

                    <EditText android:id="@+id/edit_device_activity_device_name"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:gravity="center"
                        android:background="@drawable/rounded_edittext"
                        android:layout_margin="10dp"
                        android:layout_weight="4"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="60dp"
                    android:layout_margin="5dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:gravity="center"
                        android:text="@string/add_device_activity_device_type"
                        style="@style/add_device_txt"
                        android:layout_weight="6"/>

                    <TextView
                        android:id="@+id/edit_device_activity_device_type"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_margin="10dp"
                        style="@style/add_device_txt"
                        android:background="@drawable/rounded_edittext"
                        android:layout_weight="4"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="60dp"
                    android:layout_margin="5dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:gravity="center"
                        android:text="@string/add_device_activity_device_location"
                        style="@style/add_device_txt"
                        android:layout_weight="6"/>

                    <EditText android:id="@+id/edit_device_activity_device_location"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:gravity="center"
                        android:layout_margin="10dp"
                        android:background="@drawable/rounded_edittext"
                        android:layout_weight="4"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:gravity="center"
                        android:text="@string/add_device_activity_device_note"
                        style="@style/add_device_txt"
                        android:layout_weight="6"/>

                    <EditText android:id="@+id/edit_device_activity_device_note"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:gravity="top"
                        android:lines="4"
                        android:background="@drawable/rounded_edittext"
                        android:padding="10dp"
                        android:layout_margin="10dp"
                        android:layout_weight="4"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_weight="6">
                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:gravity="center"
                        android:layout_weight="2">
                        <ImageView
                            android:id="@+id/edit_device_activity_edit_device_button"
                            android:layout_width="200dp"
                            android:layout_height="60dp"
                            android:src="@drawable/edit_device_button"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="3"/>
                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:gravity="center"
                        android:layout_weight="2">
                        <ImageView
                            android:id="@+id/edit_device_activity_cancel_button"
                            android:layout_width="200dp"
                            android:layout_height="60dp"
                            android:src="@drawable/cancel_button"/>
                    </LinearLayout>
                </LinearLayout>


            </LinearLayout>
        </ScrollView>


    </LinearLayout>



</LinearLayout>
